syntax = "proto3";

option csharp_namespace = "OmniRelay.Samples.CodegenTee";

package risk;

message RiskRequest {
  string portfolio_id = 1;
  double exposure = 2;
  double climate_score = 3;
}

message RiskResponse {
  string version = 1;
  double risk_score = 2;
  double limit_usage = 3;
}

service RiskService {
  rpc ScorePortfolio (RiskRequest) returns (RiskResponse);
}
